# opsinputs

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  Jenkinsfile  LICENSE  README.md  VERSION.cmake  Varfields.md  testapp1.cpp  testapp2.cpp
.github/: CODEOWNERS
.github/workflows/: ci.yml  enforce-labels.yml  label.yml  manual.yml
ci/: CMakeLists.txt  build-and-test  get-ref-branch  opsinputs-ci-build
cmake/: FindOPS.cmake  FindSHUM.cmake  opsinputs_compiler_flags.cmake  opsinputs_functions.cmake
etc/: CMakeLists.txt
etc/global/cx/: AHIClr.nl  ATMS.nl  Aircraft.nl  GPSRO.nl  GroundGPS.nl  Oceanwinds.nl  SEVIRIClr.nl  SatTCWV.nl  Sonde.nl  Surface.nl
etc/global/cx/screen/: Surface.nl
etc/global/varobs/: AHIClr.nl  ATMS.nl  ATOVS.nl  Aircraft.nl  GPSRO.nl  IASI.nl  Scatwind.nl  ScatwindChosen.nl
etc/ukv/cx/: GeoCloud.nl  Radar.nl  RadarZ.nl  Surface.nl  SurfaceCloud.nl
etc/ukv/varobs/: Radar.nl  RadarZ.nl  Sonde.nl
src/: CMakeLists.txt
src/cxvarobs/: CMakeLists.txt  CxWriter.cc  CxWriter.h  CxWriter.interface.F90  CxWriter.interface.h  CxWriterParameters.h  LocalEnvironment.cc  LocalEnvironment.h  MPIExceptionSynchronizer.cc  MPIExceptionSynchronizer.h  ScopedSetEnv.cc  ScopedSetEnv.h  VarObsWriter.cc  VarObsWriter.h  VarObsWriter.interface.F90  VarObsWriter.interface.h  VarObsWriterParameters.h  cxvarobs_cxgenerate_mod.F90  cxvarobs_cxwriter_mod.F90  cxvarobs_mpl_mod.F90  cxvarobs_obsdatavector_f.cc  cxvarobs_obsdatavector_f.h  cxvarobs_obsdatavector_mod.F90  cxvarobs_obsspace_f.cc  cxvarobs_obsspace_f.h  cxvarobs_obsspace_interface.f90  cxvarobs_obsspace_mod.F90  cxvarobs_utils_mod.F90  cxvarobs_varobswriter_mod.F90  instantiateObsFilterFactory.h  obsdatavector_f.cc  obsdatavector_f.h  obsdatavector_interface.f90  obsdatavector_mod.F90
src/opsinputs/: CMakeLists.txt  CxWriter.cc  CxWriter.h  CxWriter.interface.F90  CxWriter.interface.h  CxWriterParameters.h  GnssroStationIDMetOffice.cc  GnssroStationIDMetOffice.h  LocalEnvironment.cc  LocalEnvironment.h  MPIExceptionSynchronizer.cc  MPIExceptionSynchronizer.h  VarObsWriter.cc  VarObsWriter.h  VarObsWriter.interface.F90  VarObsWriter.interface.h  VarObsWriterParameters.h  instantiateObsFilterFactory.cc  instantiateObsFilterFactory.h  opsinputs_cxfields_mod.F90  opsinputs_cxgenerate_mod.F90  opsinputs_cxwriter_mod.F90  opsinputs_fill_mod.F90  opsinputs_jediopsobs_mod.F90  opsinputs_jeditoopslayoutmapping_mod.F90  opsinputs_mpl_mod.F90  opsinputs_obsdatavector_f.cc  opsinputs_obsdatavector_f.h  opsinputs_obsdatavector_interface.f90  opsinputs_obsdatavector_mod.F90  opsinputs_obsspace_f.cc  opsinputs_obsspace_f.h  opsinputs_obsspace_interface.f90  opsinputs_obsspace_mod.F90  opsinputs_utils_mod.F90  opsinputs_varobswriter_mod.F90
test/: CMakeLists.txt  cxvarobs_ioda_data_downloader.py  generate_unittest_netcdfs.py  opsprog_runner.sh.in
test/cxvarobs/: CheckerUtils.cc  CheckerUtils.h  CxChecker.cc  CxChecker.h  CxCheckerParameters.h  MPIExceptionSynchronizer.h  ResetFlagsToPass.cc  ResetFlagsToPass.h  ResetFlagsToPassParameters.h  TempFile.cc  TempFile.h  VarObsChecker.cc  VarObsChecker.h  VarObsCheckerParameters.h  instantiateObsFilterFactory.h
test/mains/: TestCxVarObsFilters.cc  TestMPIExceptionSynchronizer.cc  TestObsFilters.cc  TestOpsInputsFilters.cc
test/opsinputs/: CheckerUtils.cc  CheckerUtils.h  CxChecker.cc  CxChecker.h  CxCheckerParameters.h  MPIExceptionSynchronizer.h  ObsFilters.h  ResetFlagsToPass.cc  ResetFlagsToPass.h  ResetFlagsToPassParameters.h  TempFile.cc  TempFile.h  VarObsChecker.cc  VarObsChecker.h  VarObsCheckerParameters.h  instantiateObsFilterFactory.cc  instantiateObsFilterFactory.h
test/testinput/: 000002_StashItem_u.yaml  000004_StashItem_theta.nc4  000004_StashItem_theta.yaml  000004_StashItem_theta_MPI_1.yaml  000004_StashItem_theta_MPI_4.yaml  000030_StashItem_modelsurface.yaml  001_SurfaceCxField_Orog.nc4  001_SurfaceCxField_Orog.yaml  001_UpperAirCxField_theta.nc4  001_UpperAirCxField_theta.yaml  001_UpperAirCxField_theta_MPI_1.yaml  001_UpperAirCxField_theta_MPI_4.yaml  001_VarField_pstar.nc4  001_VarField_pstar.yaml  001_VarField_pstar_stationID_integer.nc4  001_VarField_pstar_stationID_integer.yaml  002_SurfaceCxField_pstar.nc4  002_SurfaceCxField_pstar.yaml  002_UpperAirCxFieldForMultiLevelObs_relative_humidity.nc4  002_UpperAirCxField_relative_humidity.nc4  002_UpperAirCxField_rh_AMSUB.nc4  002_UpperAirCxField_rh_AMSUB.yaml  002_UpperAirCxField_rh_Sonde.nc4  002_UpperAirCxField_rh_Sonde.yaml  002_VarField_temperature_RadarZ.nc4  002_VarField_temperature_RadarZ.yaml  002_VarField_temperature_RadarZ_MPI_1.yaml  002_VarField_temperature_RadarZ_MPI_4.yaml  002_VarField_temperature_Surface.nc4  002_VarField_temperature_Surface.yaml  003_SurfaceCxField_t2.nc4  003_SurfaceCxField_t2.yaml  003_UpperAirCxField_u.nc4  003_UpperAirCxField_u.yaml  003_VarField_rh_Sonde.nc4  003_VarField_rh_Sonde.yaml  003_VarField_rh_Surface.nc4  003_VarField_rh_Surface.yaml  004_SurfaceCxField_rh2.nc4  004_SurfaceCxField_rh2.yaml  (+291 more)
test/testinput/CxWriterNamelists_001_SurfaceCxField_Orog/: AMSUB.nl
test/testinput/CxWriterNamelists_001_UpperAirCxField_theta/: AMSUB.nl
test/testinput/CxWriterNamelists_002_SurfaceCxField_pstar/: HLOSwind.nl
test/testinput/CxWriterNamelists_002_UpperAirCxField_rh/: AMSUB.nl
test/testinput/CxWriterNamelists_003_SurfaceCxField_t2/: AMSUB.nl
test/testinput/CxWriterNamelists_003_UpperAirCxField_u/: HLOSwind.nl
test/testinput/CxWriterNamelists_004_SurfaceCxField_rh2/: AMSUB.nl
test/testinput/CxWriterNamelists_004_UpperAirCxField_v/: HLOSwind.nl
test/testinput/CxWriterNamelists_005_SurfaceCxField_u10/: AMSUB.nl
test/testinput/CxWriterNamelists_005_UpperAirCxField_q/: AMSUB.nl
test/testinput/CxWriterNamelists_006_SurfaceCxField_v10/: AMSUB.nl
test/testinput/CxWriterNamelists_007_SurfaceCxField_modelsurface/: SatTCWV.nl
test/testinput/CxWriterNamelists_008_SurfaceCxField_visibility_1p5m/: Surface.nl
test/testinput/CxWriterNamelists_011_UpperAirCxField_P/: AMSUB.nl
test/testinput/CxWriterNamelists_013_SurfaceCxField_TskinSea/: AMSUB.nl
(+46 files in other folders)
